Agrgegando texto a inconsistencia.html

--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.html
@@ -1,1 +1,6 @@
 <p>inconsistencia works!</p>
+<p>inconsistencia works!</p>
+<p>inconsistencia works!</p>
+<p>inconsistencia works!</p>
+<p>inconsistencia works!</p>
+<p>inconsistencia works!</p>
