--- a/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
+++ b/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
@@ -1,4 +1,40 @@
-<p>backups works!</p>
-<p>backups works!</p>
-<p>backups works!</p>
-<p>backups works!</p>
+<div class="tamaño-titulo-encabezado">
+  <div class="tam-titulo-encabezado"  style="padding-top: 160px !important;">
+    <nav class="navbar navbar-light bg-light" style = "padding-left: 40px;
+    padding-right: 40px; background: transparent !important">
+      <form class="form-row" style="width: 100% !important">
+        <div class="col-10">
+          <input class="form-control-lg inputSearch" type="email" placeholder="Ingrese el correo del cliente" aria-label="Search" >
+        </div>
+        <div class="col-2">
+          <button class="btn btn-lg btn-primary btnSearch" type="submit">Buscar</button>
+        </div>
+      </form>
+    </nav>
+  </div>
+</div>
+<div class="text-center" style=" padding: 50px">
+  <h2 class="font-weight-bold">Backups</h2>
+  <div class="row">
+    <div class="col-9"></div>
+    <div class="col-3">
+      <div class="form-group row">
+        <div class="col-2">
+          <label for="backup" class="col-form-label" style="font-size: 18px; font-weight: normal">Rango:</label>
+        </div>
+        <div class="col-5">
+          <select id="backup" class="form-control"  name="backup" >
+           <option>05</option>
+           <option>10</option>
+           <option>15</option>
+           <option>20</option>
+          </select>
+
+        </div>
+        <div class="col-5">
+          <button class="btn btn-outline-success">Limpiar</button>
+        </div >
+      </div>
+    </div>
+  </div>
+</div>
