--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 /*@import '~bootstrap/dist/css/bootstrap.min.css';*/
-
+.inputSearch {
+  width: 100%; height: 80px;
+  background: #D7D7D8;
+  border: 0px;
+}
+.btnSearch {
+  width: 100%; height: 80px;
+}
 
 .tamaño-titulo-encabezado {
   width: 100%; height: 300px; background-color: rgba(82, 103, 124, 0.82);
