incosistencia vinculada con tabs

--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/automatics/automatics.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/automatics/automatics.component.html
@@ -41,7 +41,7 @@
       <td class="Celdas-Tabla">{{automatic.cantidadRepetida}}</td>
       <td class="Celdas-Tabla">{{automatic.id_backup}}</td>
       <td class="Celdas-Tabla">{{automatic.id_operation}}</td>
-      <td class="Celdas-Tabla">{{automatic.account}}</td>
+      <td class="Celdas-Tabla">{{automatic.id_account}}</td>
       <td class="Celdas-Tabla">{{automatic.id_category}}</td>
       <td class="Celdas-Tabla">{{automatic.period}}</td>
       <td class="Celdas-Tabla">{{automatic.repeat_number}}</td>
