--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/preferences/preferences.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/preferences/preferences.component.html
@@ -1,1 +1,41 @@
-<p>preferences works!</p>
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  <p style="font-size: 20px; color: white">{{msj}}</p>
+</ngx-spinner>
+
+<div class="container text-center" *ngIf="preferencesService.Preferences.length == 0" style="margin-top: 200px;">
+  <h2 class="font-weight-lighter">La tabla Preferences no tiene inconsistencia de datos</h2>
+</div>
+<div *ngIf="preferencesService.Preferences.length > 0">
+  <table class="table table-hover">
+    <thead class="thead-dark">
+    <tr>
+      <th scope="col" class="Encabezado-Tabla">#</th>
+      <th scope="col" class="Encabezado-Tabla">Cantidad repetida</th>
+      <th scope="col" class="Encabezado-Tabla">Id Backup</th>
+      <th scope="col" class="Encabezado-Tabla">key_name</th>
+      <th scope="col" class="Encabezado-Tabla">value</th>
+      <th scope="col" class="Encabezado-Tabla">Operación</th>
+    </thead>
+    <tbody>
+    <tr *ngFor="let preference of preferencesService.Preferences; let i = index" >
+      <th scope="row" class="Celdas-Tabla">{{(i+1)}}</th>
+      <td class="Celdas-Tabla">{{preference.cantidadRepetida}}</td>
+      <td class="Celdas-Tabla">{{preference.id_backup}}</td>
+      <td class="Celdas-Tabla">{{preference.key_name}}</td>
+      <td class="Celdas-Tabla">{{preference.value}}</td>
+
+      <td class="Celdas-Tabla">
+        <button class="btn btn-primary">Corregir</button>
+        <!--button type="button" class="btn btn-primary" style="width: 100px; margin-right: 20px; font-size: 20px" >Editar</button>
+        <button type="button" class="btn btn-danger" style="width: 100px; margin-left: 20px; font-size: 20px" (click)="eliminar(i, back.id_backup)">Eliminar</button-->
+      </td>
+    </tr>
+
+    </tbody>
+  </table>
+</div>
