--- a/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
+++ b/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
@@ -1,13 +1,12 @@
 <div class="tamaño-titulo-encabezado">
   <div class="tam-titulo-encabezado"  style="padding-top: 160px !important;">
-    <nav class="navbar navbar-light bg-light" style = "padding-left: 40px;
-    padding-right: 40px; background: transparent !important">
-      <form class="form-row" style="width: 100% !important">
+    <nav class="navbar navbar-light bg-light" style = "padding-left: 40px; padding-right: 40px; background: transparent !important">
+      <form class="form-row" style="width: 100% !important" (submit)="search()">
         <div class="col-10">
-          <input class="form-control-lg inputSearch" type="email" placeholder="Ingrese el correo del cliente" aria-label="Search" >
+          <input [(ngModel)]="email" name="correo" class="form-control-lg inputSearch" type="email" placeholder="Ingrese el correo del cliente" aria-label="Search">
         </div>
         <div class="col-2">
-          <button class="btn btn-lg btn-primary btnSearch" type="submit">Buscar</button>
+          <button class="btn btn-lg btn-primary btnSearch" type="submit" >Buscar</button>
         </div>
       </form>
     </nav>
@@ -15,6 +14,7 @@
 </div>
 <div class="text-center" style=" padding: 50px">
   <h2 class="font-weight-bold">Backups</h2>
+  <h3 class="font-weight-lighter">{{util.emailUserMntBackup}}</h3>
   <div class="row">
     <div class="col-9"></div>
     <div class="col-3">
@@ -29,7 +29,6 @@
            <option>15</option>
            <option>20</option>
           </select>
-
         </div>
         <div class="col-5">
           <button class="btn btn-outline-success">Limpiar</button>
