--- a/src/styles.css
+++ b/src/styles.css
@@ -2,34 +2,35 @@
 /*@import '~bootstrap/dist/css/bootstrap.min.css';*/
 .inputSearch {
   width: 100%; height: 80px;
-  background: #D7D7D8;
+  background: rgba(255, 255, 255, 0.16);
   border: 0px;
+  color: white;
 }
 .btnSearch {
   width: 100%; height: 80px;
 }
 
 .tamaño-titulo-encabezado {
-  width: 100%; height: 300px; background-color: rgba(82, 103, 124, 0.82);
+width: 100%; height: 300px; background-color: rgba(82, 103, 124, 0.82);
 }
 .tam-titulo-encabezado {
-  padding-top: 200px; text-align: center;
+padding-top: 200px; text-align: center;
 }
 
 .btn-redondo {
-  height: 100px !important;
-  width: 100px !important;
-  border-radius: 50%;
+height: 100px !important;
+width: 100px !important;
+border-radius: 50%;
 }
 
 .navEncode {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 125px;
-  padding: 30px 25px;
-  /*background-color: #52677C;*/
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 125px;
+padding: 30px 25px;
+/*background-color: #52677C;*/
   background-color: rgba(82, 103, 124, 1);
   z-index: 10;
 }
