--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.html
@@ -21,7 +21,7 @@
   <h3 class="font-weight-light">{{util.emailUserMntInconsistencia}}</h3>
   <br>
 
-  <button class="btn  btn-outline-success">Corregir Tabla</button>
+  <button class="btn  btn-outline-success" (click)="corregirTabla()">Corregir Tabla</button>
 </div>
 
 <ul class="nav nav-tabs nav-color">
