--- a/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
+++ b/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
@@ -31,7 +31,7 @@
           <label for="backup" class="col-form-label" style="font-size: 18px; font-weight: normal">Rango:</label>
         </div>
         <div class="col-5">
-          <input type="number" value="10" class="form-control"pattern="^[0-9]">
+          <input type="number" value="10" class="form-control"pattern="^[0-9]+" min="1" id="rangoBackups">
         </div>
         <div class="col-5">
           <button class="btn btn-outline-success">Limpiar</button>
