--- a/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
+++ b/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
@@ -34,7 +34,7 @@
           <input type="number" value="10" class="form-control"pattern="^[0-9]+" min="1" id="rangoBackups" [(ngModel)]="rangoBackups" name="rangoBackups">
         </div>
         <div class="col-5">
-          <button class="btn btn-outline-success" [disabled]="backupService.mntBackups.length == 0" >Limpiar</button>
+          <button class="btn btn-outline-success" [disabled]="backupService.mntBackups.length == 0" (click)="limpiarBackups(0, 'Generales', 0)">Limpiar</button>
         </div >
       </div>
     </div>
@@ -110,7 +110,7 @@
 
                   Operacion
                   <br>
-                  <button class="btn btn-outline-success" (click)="limpiar(user.id_user, user.email)">
+                  <button class="btn btn-outline-success" (click)="limpiarBackups(user.id_user, user.email, user.cantRep, i)">
                     limpiar
                   </button>
                 </th>
