--- a/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
+++ b/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
@@ -41,6 +41,12 @@
   </div>
 </div>
 
+<button class="up-right rounded-circle" (click)="util.subir()">
+    <span>
+      <fa-icon [icon]="faArrowCircleUp"></fa-icon>
+    </span>
+</button>
+
 <div id="accordion" style="padding-left: 50px;padding-right: 50px" *ngIf="backupService.mntBackups.length > 0">
   <div   class="card" *ngFor="let user of backupService.mntBackups; let i = index" >
 
@@ -82,19 +88,7 @@
     <div #cntBackupsUser class="tarjetaCuerpo">
 
       <div class="card-body">
-        <!--table class="table table-striped">
-          <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Backup</th>
-            <th scope="col">Automatico</th>
-            <th scope="col">Fecha de creacion</th>
-            <th scope="col">Fecha de descarga</th>
-            <th scope="col">Version</th>
-            <th scope="col">Operacion</th>
-          </tr>
-          </thead></table-->
-        <cdk-virtual-scroll-viewport  style="height: 500px;" itemSize="1" >
+        <cdk-virtual-scroll-viewport  style="height: 500px;" itemSize="1">
 
         <table class="table table-striped">
 
@@ -118,9 +112,8 @@
             </thead>
 
           <tbody>
-
-            <tr *cdkVirtualFor="let back of user.backups; let pos = index" class="text-center">
-              <ng-container>
+          <ng-container *cdkVirtualFor="let back of user.backups; let pos = index">
+            <tr class="text-center">
                 <th scope="row">{{ pos + 1 }}</th>
                 <td scope="row">{{ back.id_backup }}</td>
                 <td scope="row">{{ (back.automatic == 1) ? 'Si': 'No' }}</td>
@@ -130,9 +123,10 @@
                 <td scope="row">
                   <button type="button" class="btn btn-danger" style="width: 100px; font-size: 20px" (click)="eliminar(i, pos, back.id_backup)">Eliminar</button>
                 </td>
-              </ng-container>
             </tr>
-            </tbody>
+          </ng-container>
+
+          </tbody>
         </table>
         </cdk-virtual-scroll-viewport>
 
@@ -147,13 +141,10 @@
   <div
     infiniteScroll
     [infiniteScrollDistance]="2"
-    [infiniteScrollThrottle]="1000"
     (scrolled)="onScroll()">
   </div>
-
 
 </div>
 <div class="container" *ngIf="backupService.mntBackups.length == 0">
   <h3 class="font-weight-lighter text-center">{{msj}}</h3>
 </div>
-
