--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,7 @@
   height: 0px;
   line-height: 1.5;
   transition: max-height 500ms, padding 500ms;
-  overflow: hidden;
+  /*overflow-y: scroll !important;*/
 }
 
 .inputSearch {
