--- a/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
+++ b/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
@@ -137,7 +137,7 @@
     (scrolled)="onScroll()">
   </div>
 
-  <loading-spinner *ngIf="util.loading"></loading-spinner>
+  <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
 
 </div>
 <div class="container" *ngIf="backupService.mntBackups.length == 0">
