--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.html
@@ -1,3 +1,24 @@
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <!-- Buscador -->
 <div class="tamaño-titulo-encabezado">
   <div class="tam-titulo-encabezado" style="padding-top: 160px !important;">
@@ -23,7 +44,7 @@
   </div>
   <div class="row" >
     <div class="col-2"></div>
-    <div class="col-8">
+    <div class="col-7">
       <h3 class="font-weight-light text-center">{{util.emailUserMntInconsistencia}}</h3>
     </div>
     <div class="col-2">
@@ -35,6 +56,11 @@
             </select>
           </div>
         </div>
+    </div>
+    <div class="col-1">
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+        Modal
+      </button>
     </div>
   </div>
   <div class="row" style="display: block">
@@ -72,3 +98,6 @@
   </li>
 </ul>
 <router-outlet></router-outlet>
+
+
+
