--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/movements/movements.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/movements/movements.component.html
@@ -61,6 +61,6 @@
     </div>
     </tbody>
   </table>
-  <loading-spinner *ngIf="util.loading"></loading-spinner>
+  <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
 
 </div>
