--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/accounts/accounts.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/accounts/accounts.component.html
@@ -75,6 +75,6 @@
     </div>
     </tbody>
   </table>
-  <loading-spinner *ngIf="util.loading"></loading-spinner>
+  <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
 
 </div>
