--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/automatics/automatics.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/automatics/automatics.component.html
@@ -73,6 +73,6 @@
     </div>
     </tbody>
   </table>
-  <loading-spinner *ngIf="util.loading"></loading-spinner>
+  <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
 
 </div>
