--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/budgets/budgets.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/budgets/budgets.component.html
@@ -59,6 +59,6 @@
     </div>
     </tbody>
   </table>
-  <loading-spinner *ngIf="util.loading"></loading-spinner>
+  <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
 
 </div>
