--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/cardviews/cardviews.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/cardviews/cardviews.component.html
@@ -55,6 +55,6 @@
     </div>
     </tbody>
   </table>
-  <loading-spinner *ngIf="util.loading"></loading-spinner>
+  <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
 
 </div>
