--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/preferences/preferences.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/preferences/preferences.component.html
@@ -48,6 +48,6 @@
     </div>
     </tbody>
   </table>
-  <loading-spinner *ngIf="util.loading"></loading-spinner>
+  <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
 
 </div>
